crates/nash-can/src/snapshots/nash_can__module__tests__unused_case_branch_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nf x =\n    case x of\n        Just y -> 1\n        Nothing -> 0\n"
---
[
    UnusedVariable {
        region: Region {
            start: Position {
                line: 7,
                column: 14,
            },
            end: Position {
                line: 7,
                column: 15,
            },
        },
        context: Pattern,
        name: "y",
    },
]
