crates/nash-can/src/snapshots/nash_can__module__tests__unused_let_binding.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        x = 1\n    in\n    2\n"
---
[
    UnusedVariable {
        region: Region {
            start: Position {
                line: 5,
                column: 9,
            },
            end: Position {
                line: 5,
                column: 10,
            },
        },
        context: Def,
        name: "x",
    },
]
