crates/nash-can/src/snapshots/nash_can__module__tests__update_missing_record_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = { nonexistent | x = 1 }\n"
---
[
    NotFoundVar {
        region: Region {
            start: Position {
                line: 3,
                column: 7,
            },
            end: Position {
                line: 3,
                column: 18,
            },
        },
        prefix: None,
        name: "nonexistent",
        suggestions: PossibleNames {
            locals: [
                "f",
            ],
            qualified: [],
        },
    },
]
